--- a/samplesite/bboard/templates/layout/basic.html
+++ b/samplesite/bboard/templates/layout/basic.html
@@ -1,8 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Главная{% endblock %} - Доска объявлений</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'bboard/stylesheet.css' %}">
     </head>
     <body>
         <header>
