--- a/samplesite/bboard/templates/layout/basic.html
+++ b/samplesite/bboard/templates/layout/basic.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Главная{% endblock %} - Доска объявлений</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'bboard/stylesheet.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'C:\Users\Admin\PycharmProjects\ads_website\samplesite\bboard\static\bboard\stylesheet.css' %}">
     </head>
     <body>
         <header>
